--- a/web/index.html
+++ b/web/index.html
@@ -3,58 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <title>ESP32 NAT Router</title>
-  <link rel="stylesheet" href="style.css">
-    <!-- 
-        <link rel="stylesheet" href="style.css">
-        Use the line above to link to your external CSS file for styling.
-    -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>ESP320S3 NAT Configuration Menu</h1>
-  <h2>Welcome and configure your ESP32-S3 NAT Router</h>
-  <label for="ssid">SSID:</label>
-  <input type="text" id="ssid" name="ssid" maxlength="32" required pattern="^[ -~]+$" placeholder="Enter network name">
-  <label for="wpass">Password:</label>
-  <input type="text" id="wpass" name="wpass"
-    <!-- 
-        TEXT ELEMENTS:
-        - <h1> to <h6>: Headings (big to small)
-        - <p>: Paragraph (block of text)
-        - <span>: Inline text
-        - <div>: Section or container for grouping content
-    -->
+  <div style="display: flex; justify-content: space-between; align-items: center;">
+    <h1>ESP320S3 NAT Configuration Menu</h1>
+    <button id="theme-toggle">🌙 Dark Mode</button>
+  </div>
+  <h2>Welcome and configure your ESP32-S3 NAT Router</h2>
 
-    <!-- 
-        FORM ELEMENTS:
-        - <form>: Grouping of input fields and buttons for user input
-        - <input>: User input (type="text", "password", "number", etc.)
-        - <label>: Describes an input field
-        - <textarea>: Multi-line text input
-        - <button>: Clickable button (can submit a form or trigger JS)
-        - <select>: Dropdown (with <option> children)
-    -->
+  <div id="lock-ui" style="margin-bottom: 1em;">
+    <label>
+      <input type="checkbox" id="lock-toggle" checked>
+      Lock WiFi Config UI
+    </label>
+    <button id="set-lock-pass">Set/Change Lock Password</button>
+  </div>
 
-    <!-- 
-        LISTS AND TABLES:
-        - <ul>: Unordered list (with <li> items)
-        - <ol>: Ordered (numbered) list (with <li> items)
-        - <table>: Table for tabular data
-            - <tr>: Table row
-            - <td>: Table cell (data)
-            - <th>: Table header cell
-    -->
+  <div id="lock-screen" style="display:none;">
+    <input type="password" id="unlock-pass" placeholder="Enter unlock password">
+    <button id="unlock-btn">Unlock</button>
+    <span id="unlock-msg" style="color:red;"></span>
+  </div>
 
-    <!-- 
-        LINKS AND MEDIA:
-        - <a>: Hyperlink to other pages or sites
-        - <img>: Display images
-        - <video>, <audio>: Play media
-    -->
+  <div id="wifi-config">
+    <label for="wssid">Wi-Fi SSID:</label>
+    <input type="text" id="wssid" name="wssid" maxlength="32" required pattern="^[ -~]+$" placeholder="Enter Wi-Fi SSID">
+    <label for="wpass">Password:</label>
+    <input type="text" id="wpass" name="wpass" maxlength="64" required pattern="^[ -~]+$" placeholder="Enter network password">
+  </div>
 
-    <!-- 
-        SCRIPT:
-        - <script>: Add JavaScript for interactivity and dynamic content
-        - <script src="main.js"></script>: Link to an external JS file
-    -->
+  <h3>Connected Clients</h3>
+  <table id="clients-table" border="1" style="width:100%;max-width:600px;">
+    <thead>
+      <tr><th>IP Address</th><th>MAC Address</th><th>Action</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <script>
+    // --- Dark/Light Mode ---
+    const themeToggle = document.getElementById('theme-toggle');
+    themeToggle.onclick = () => {
+      document.body.classList.toggle('dark');
+      themeToggle.textContent = document.body.classList.contains('dark') ? '☀️ Light Mode' : '🌙 Dark Mode';
+      localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
+    };
+    if (localStorage.getItem('theme') === 'dark') {
+      document.body.classList.add('dark');
+      themeToggle.textContent = '☀️ Light Mode';
+    }
+
+    // --- WiFi Config UI Lock ---
+    const lockToggle = document.getElementById('lock-toggle');
+    const lockScreen = document.getElementById('lock-screen');
+    const wifiConfig = document.getElementById('wifi-config');
+    const unlockBtn = document.getElementById('unlock-btn');
+    const unlockPass = document.getElementById('unlock-pass');
+    const unlockMsg = document.getElementById('unlock-msg');
+    const setLockPassBtn = document.getElementById('set-lock-pass');
+
+    // Simple XOR "encryption" for demo (not secure)
+    function xorEncrypt(str, key) {
+      return btoa([...str].map((c,i)=>String.fromCharCode(c.charCodeAt(0)^key.charCodeAt(i%key.length))).join(''));
+    }
+    function xorDecrypt(enc, key) {
+      try {
+        return atob(enc).split('').map((c,i)=>String.fromCharCode(c.charCodeAt(0)^key.charCodeAt(i%key.length))).join('');
+      } catch { return ''; }
+    }
+
+    function showLockScreen(show) {
+      lockScreen.style.display = show ? '' : 'none';
+      wifiConfig.style.display = show ? 'none' : '';
+    }
+
+    function checkLock() {
+      if (lockToggle.checked && localStorage.getItem('lockPass')) {
+        showLockScreen(true);
+      } else {
+        showLockScreen(false);
+      }
+    }
+
+    lockToggle.onchange = () => {
+      localStorage.setItem('lockEnabled', lockToggle.checked ? '1' : '');
+      checkLock();
+    };
+
+    setLockPassBtn.onclick = () => {
+      const pass = prompt('Set new lock password:');
+      if (pass && pass.length > 0) {
+        const confirmPass = prompt('Confirm password:');
+        if (pass === confirmPass) {
+          // Store encrypted dummy string with password as key
+          localStorage.setItem('lockPass', xorEncrypt('esp32lock', pass));
+          alert('Lock password set!');
+          checkLock();
+        } else {
+          alert('Passwords do not match.');
+        }
+      }
+    };
+
+    unlockBtn.onclick = () => {
+      const pass = unlockPass.value;
+      if (xorDecrypt(localStorage.getItem('lockPass'), pass) === 'esp32lock') {
+        showLockScreen(false);
+        unlockMsg.textContent = '';
+        unlockPass.value = '';
+      } else {
+        unlockMsg.textContent = 'Incorrect password!';
+      }
+    };
+
+    // On load, restore lock state
+    if (localStorage.getItem('lockEnabled') === '1') lockToggle.checked = true;
+    else lockToggle.checked = false;
+    checkLock();
+
+    // --- Fetch and display clients ---
+    async function fetchClients() {
+      let clients = [];
+      try {
+      const res = await fetch('/api/clients');
+      clients = await res.json();
+      } catch {
+      clients = [];
+      }
+      const tbody = document.querySelector('#clients-table tbody');
+      tbody.innerHTML = '';
+      clients.forEach(client => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `<td>${client.ip}</td><td>${client.mac}</td>
+          <td><button onclick="kickUser('${client.mac}')">Kick</button></td>`;
+        tbody.appendChild(tr);
+      });
+    }
+
+    window.kickUser = async function(mac) {
+      if (!confirm(`Kick user with MAC ${mac}?`)) return;
+      try {
+        await fetch('/api/kick', {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          body: JSON.stringify({mac})
+        });
+        fetchClients();
+      } catch {
+        alert('Failed to kick user.');
+      }
+    };
+
+    fetchClients();
+    setInterval(fetchClients, 5000); // Refresh every 5s
+  </script>
 </body>
 </html>
